// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaskCard snapshots active task (default badge) 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "borderRadius": 12,
        "borderWidth": 1,
        "marginBottom": 12,
        "padding": 14,
      },
      {
        "backgroundColor": "#fff",
        "borderColor": "#E0E0E0",
      },
      false,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
        "justifyContent": "space-between",
        "marginBottom": 8,
      }
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "flex": 1,
            "fontSize": 13,
          },
          {
            "color": "#9E9E9E",
          },
        ]
      }
    >
      Backend на Go
    </Text>
    <View
      style={
        [
          {
            "borderRadius": 8,
            "paddingHorizontal": 8,
            "paddingVertical": 4,
          },
          {
            "backgroundColor": "#FFEBEB",
          },
        ]
      }
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "fontSize": 12,
              "fontWeight": "600",
            },
            {
              "color": "#C62828",
            },
          ]
        }
      >
        Не выполнена
      </Text>
    </View>
  </View>
  <Text
    numberOfLines={2}
    style={
      [
        {
          "fontSize": 17,
          "fontWeight": "700",
          "marginBottom": 6,
        },
        {
          "color": "#11181C",
        },
      ]
    }
  >
    Реализовать REST API для каталога
  </Text>
  <Text
    style={
      [
        {
          "fontSize": 14,
          "marginBottom": 4,
        },
        {
          "color": "#11181C",
        },
      ]
    }
  >
    до 
    20.04.26
  </Text>
  <Text
    style={
      [
        {
          "fontSize": 14,
          "fontWeight": "600",
        },
        {
          "color": "#6A5ACD",
        },
      ]
    }
  >
    +
    15
     алгокоинов
  </Text>
</View>
`;

exports[`TaskCard snapshots completed with custom badge 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "borderRadius": 12,
        "borderWidth": 1,
        "marginBottom": 12,
        "padding": 14,
      },
      {
        "backgroundColor": "#fff",
        "borderColor": "#E0E0E0",
      },
      false,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
        "justifyContent": "space-between",
        "marginBottom": 8,
      }
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "flex": 1,
            "fontSize": 13,
          },
          {
            "color": "#9E9E9E",
          },
        ]
      }
    >
      Backend на Go
    </Text>
    <View
      style={
        [
          {
            "borderRadius": 8,
            "paddingHorizontal": 8,
            "paddingVertical": 4,
          },
          {
            "backgroundColor": "#ECFDF5",
          },
        ]
      }
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "fontSize": 12,
              "fontWeight": "600",
            },
            {
              "color": "#166534",
            },
          ]
        }
      >
        Принята
      </Text>
    </View>
  </View>
  <Text
    numberOfLines={2}
    style={
      [
        {
          "fontSize": 17,
          "fontWeight": "700",
          "marginBottom": 6,
        },
        {
          "color": "#11181C",
        },
      ]
    }
  >
    Реализовать REST API для каталога
  </Text>
  <Text
    style={
      [
        {
          "fontSize": 14,
          "marginBottom": 4,
        },
        {
          "color": "#11181C",
        },
      ]
    }
  >
    до 
    20.04.26
  </Text>
  <Text
    style={
      [
        {
          "fontSize": 14,
          "fontWeight": "600",
        },
        {
          "color": "#6A5ACD",
        },
      ]
    }
  >
    +
    15
     алгокоинов
  </Text>
</View>
`;

exports[`TaskCard snapshots overdue task 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "borderRadius": 12,
        "borderWidth": 1,
        "marginBottom": 12,
        "padding": 14,
      },
      {
        "backgroundColor": "#fff",
        "borderColor": "#E0E0E0",
      },
      false,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
        "justifyContent": "space-between",
        "marginBottom": 8,
      }
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "flex": 1,
            "fontSize": 13,
          },
          {
            "color": "#9E9E9E",
          },
        ]
      }
    >
      Backend на Go
    </Text>
    <View
      style={
        [
          {
            "borderRadius": 8,
            "paddingHorizontal": 8,
            "paddingVertical": 4,
          },
          {
            "backgroundColor": "#FEE2E2",
          },
        ]
      }
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "fontSize": 12,
              "fontWeight": "600",
            },
            {
              "color": "#B91C1C",
            },
          ]
        }
      >
        Просрочена
      </Text>
    </View>
  </View>
  <Text
    numberOfLines={2}
    style={
      [
        {
          "fontSize": 17,
          "fontWeight": "700",
          "marginBottom": 6,
        },
        {
          "color": "#11181C",
        },
      ]
    }
  >
    Реализовать REST API для каталога
  </Text>
  <Text
    style={
      [
        {
          "fontSize": 14,
          "marginBottom": 4,
        },
        {
          "color": "#11181C",
        },
      ]
    }
  >
    до 
    20.04.26
  </Text>
  <Text
    style={
      [
        {
          "fontSize": 14,
          "fontWeight": "600",
        },
        {
          "color": "#6A5ACD",
        },
      ]
    }
  >
    +
    15
     алгокоинов
  </Text>
</View>
`;
